--- a/deploymentfiles/deployment.yml
+++ b/deploymentfiles/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: mc-app
-        image: devopshubg333/batch13:5
+        image: narenreddym/batch13:
           ports:
         - containerPort: 8080
 
